--- a/index.html
+++ b/index.html
@@ -1,9 +1,5 @@
 <!DOCTYPE HTML>
-<!--
-	Massively by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
 		<title>Cabin Website</title>
@@ -108,23 +104,59 @@
 
 					<div class="box alt" id="photoSection">
 						<h2>Photos</h2>
-						<div class="row gtr-50 gtr-uniform">
-							<div class="col-4"><span class="image fit"><img src="images/cabin-1.jpg" alt="" loading="lazy" /></span></div>
-							<div class="col-4"><span class="image fit"><img src="images/cabin-2.jpg" alt="" loading="lazy" /></span></div>
-							<div class="col-4"><span class="image fit"><img src="images/cabin-3.jpg" alt="" loading="lazy" /></span></div>
+						<div class="row gtr-50 gtr-uniform" id="gridPhotoContainer">
+							<div class="col-4"><span class="image fit"><img src="images/cabin-1.jpg" class="gridPhoto" alt="" loading="lazy" onclick="location.href='#img1'"/></span></div>
+							<div class="col-4"><span class="image fit"><img src="images/cabin-2.jpg" class="gridPhoto" alt="" loading="lazy" onclick="location.href='#img2'"/></span></div>
+							<div class="col-4"><span class="image fit"><img src="images/cabin-3.jpg" class="gridPhoto" alt="" loading="lazy" onclick="location.href='#img3'"/></span></div>
 							<!-- Break -->
-							<div class="col-4"><span class="image fit"><img src="images/cabin-4.jpg" alt="" loading="lazy" /></span></div>
-							<div class="col-4"><span class="image fit"><img src="images/cabin-5.jpg" alt="" loading="lazy" /></span></div>
-							<div class="col-4"><span class="image fit"><img src="images/cabin-6.jpg" alt="" loading="lazy" /></span></div>
+							<div class="col-4"><span class="image fit"><img src="images/cabin-4.jpg" class="gridPhoto" alt="" loading="lazy" onclick="location.href='#img4'"/></span></div>
+							<div class="col-4"><span class="image fit"><img src="images/cabin-5.jpg" class="gridPhoto" alt="" loading="lazy" onclick="location.href='#img5'"/></span></div>
+							<div class="col-4"><span class="image fit"><img src="images/cabin-6.jpg" class="gridPhoto" alt="" loading="lazy" onclick="location.href='#img6'"/></span></div>
 							<!-- Break -->
-							<div class="col-4"><span class="image fit"><img src="images/cabin-7.jpg" alt="" loading="lazy" /></span></div>
-							<div class="col-4"><span class="image fit"><img src="images/cabin-8.jpg" alt="" loading="lazy" /></span></div>
-							<div class="col-4"><span class="image fit"><img src="images/cabin-9.jpg" alt="" loading="lazy" /></span></div>
+							<div class="col-4"><span class="image fit"><img src="images/cabin-7.jpg" class="gridPhoto" alt="" loading="lazy" onclick="location.href='#img7'"/></span></div>
+							<div class="col-4"><span class="image fit"><img src="images/cabin-8.jpg" class="gridPhoto" alt="" loading="lazy" onclick="location.href='#img8'"/></span></div>
+							<div class="col-4"><span class="image fit"><img src="images/cabin-9.jpg" class="gridPhoto" alt="" loading="lazy" onclick="location.href='#img9'"/></span></div>
 							<!-- Break -->
-							<div class="col-4"><span class="image fit"><img src="images/cabin-10.jpg" alt="" loading="lazy" /></span></div>
-							<div class="col-4"><span class="image fit"><img src="images/cabin-11.jpg" alt="" loading="lazy" /></span></div>
-							<div class="col-4"><span class="image fit"><img src="images/cabin-12.jpg" alt="" loading="lazy" /></span></div>
+							<div class="col-4"><span class="image fit"><img src="images/cabin-10.jpg" class="gridPhoto" alt="" loading="lazy" onclick="location.href='#img10'"/></span></div>
+							<div class="col-4"><span class="image fit"><img src="images/cabin-11.jpg" class="gridPhoto" alt="" loading="lazy" onclick="location.href='#img11'"/></span></div>
+							<div class="col-4"><span class="image fit"><img src="images/cabin-12.jpg" class="gridPhoto" alt="" loading="lazy" onclick="location.href='#img12'"/></span></div>
 						</div>
+						<a href="#gridPhotoContainer" class="lightbox" id="img2">
+							<span style="background-image: url('images/cabin-2.jpg');" loading="lazy"></span>
+						</a>
+						<a href="#gridPhotoContainer" class="lightbox" id="img3">
+							<span style="background-image: url('images/cabin-3.jpg');" loading="lazy"></span>
+						</a>
+						<a href="#gridPhotoContainer" class="lightbox" id="img1">
+							<span style="background-image: url('images/cabin-1.jpg');" loading="lazy"></span>
+						</a>
+						<a href="#gridPhotoContainer" class="lightbox" id="img4">
+							<span style="background-image: url('images/cabin-4.jpg')" loading="lazy"></span>
+						</a>
+						<a href="#gridPhotoContainer" class="lightbox" id="img5">
+							<span style="background-image: url('images/cabin-5.jpg')" loading="lazy"></span>
+						</a>
+						<a href="#gridPhotoContainer" class="lightbox" id="img6">
+							<span style="background-image: url('images/cabin-6.jpg')" loading="lazy"></span>
+						</a>
+						<a href="#gridPhotoContainer" class="lightbox" id="img7">
+							<span style="background-image: url('images/cabin-7.jpg')" loading="lazy"></span>
+						</a>
+						<a href="#gridPhotoContainer" class="lightbox" id="img8">
+							<span style="background-image: url('images/cabin-8.jpg')" loading="lazy"></span>
+						</a>
+						<a href="#gridPhotoContainer" class="lightbox" id="img9">
+							<span style="background-image: url('images/cabin-9.jpg')" loading="lazy"></span>
+						</a>
+						<a href="#gridPhotoContainer" class="lightbox" id="img10">
+							<span style="background-image: url('images/cabin-10.jpg')" loading="lazy"></span>
+						</a>
+						<a href="#gridPhotoContainer" class="lightbox" id="img11">
+							<span style="background-image: url('images/cabin-11.jpg')" loading="lazy"></span>
+						</a>
+						<a href="#gridPhotoContainer" class="lightbox" id="img12">
+							<span style="background-image: url('images/cabin-12.jpg')" loading="lazy"></span>
+						</a>
 					</div>
 				
 
